Updated code as suggested changes by Intellij